--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   go_router: ^14.1.4
+  dio: ^5.4.3+1
+  flutter_riverpod: ^2.5.1
 
 dev_dependencies:
   flutter_test:
